--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -29,20 +29,6 @@
                                     <outletCollection property="gestureRecognizers" destination="Ock-s3-pv7" appends="YES" id="6d2-6A-8dY"/>
                                 </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kwg-u4-SQB">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="Gl5-Aa-mCr"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="🎤">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="tapSoundButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kDw-QF-aFl"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keeeeeep" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="goi-cw-hF3">
                                 <rect key="frame" x="149" y="323" width="77" height="21"/>
                                 <animations/>
@@ -98,7 +84,6 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="done:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hy0-DJ-19L"/>
                                     <segue destination="nhD-o7-srJ" kind="show" id="gwI-fi-e7N"/>
                                 </connections>
                             </button>
@@ -114,15 +99,12 @@
                             <constraint firstItem="OOk-t2-LFN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KOm-G2-q2C"/>
                             <constraint firstItem="MDb-DT-yf2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Kit-SX-s9p"/>
                             <constraint firstItem="lx0-SS-lNg" firstAttribute="leading" secondItem="C5M-M4-Sak" secondAttribute="trailing" id="R7v-Fi-REy"/>
-                            <constraint firstItem="kwg-u4-SQB" firstAttribute="top" secondItem="MDb-DT-yf2" secondAttribute="bottom" constant="18" id="Tzl-hF-7su"/>
                             <constraint firstItem="OOk-t2-LFN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aS2-tu-gqZ"/>
                             <constraint firstItem="C5M-M4-Sak" firstAttribute="leading" secondItem="Ox4-w2-oTz" secondAttribute="trailing" id="dVI-Ox-rlO"/>
                             <constraint firstItem="MDb-DT-yf2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eUo-dZ-k6J"/>
-                            <constraint firstItem="kwg-u4-SQB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="iLw-aL-8H4"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lx0-SS-lNg" secondAttribute="bottom" constant="43" id="lIn-ol-Pmy"/>
                             <constraint firstAttribute="trailing" secondItem="MDb-DT-yf2" secondAttribute="trailing" id="ppa-Kf-R47"/>
                             <constraint firstItem="Ox4-w2-oTz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rBl-l4-OWQ"/>
-                            <constraint firstAttribute="trailing" secondItem="kwg-u4-SQB" secondAttribute="trailing" id="xmI-xZ-VMN"/>
                             <constraint firstAttribute="trailing" secondItem="OOk-t2-LFN" secondAttribute="trailing" id="yko-nb-poL"/>
                         </constraints>
                         <variation key="default">
@@ -136,10 +118,9 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="cameraView" destination="OOk-t2-LFN" id="Qle-nc-yK1"/>
-                        <outlet property="doneButton" destination="lx0-SS-lNg" id="7jh-gT-QEX"/>
                         <outlet property="progressBar" destination="MDb-DT-yf2" id="28G-PP-BXB"/>
                         <outlet property="recordButton" destination="C5M-M4-Sak" id="XrD-qD-V43"/>
-                        <outlet property="soundButton" destination="kwg-u4-SQB" id="rcl-0i-fFM"/>
+                        <outlet property="showListButton" destination="lx0-SS-lNg" id="p3J-tW-HIQ"/>
                         <outlet property="switchButton" destination="Ox4-w2-oTz" id="v08-ys-5xA"/>
                     </connections>
                 </viewController>
