--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -45,6 +45,16 @@
                                 </constraints>
                                 <color key="trackTintColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZq-S3-fWn">
+                                <rect key="frame" x="0.0" y="20" width="375" height="21"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="23q-Ef-G1f"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C5M-M4-Sak">
                                 <rect key="frame" x="148" y="545" width="79" height="79"/>
                                 <animations/>
@@ -94,6 +104,7 @@
                             <constraint firstItem="C5M-M4-Sak" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="470-DD-7Xa"/>
                             <constraint firstAttribute="trailing" secondItem="lx0-SS-lNg" secondAttribute="trailing" id="7z5-fj-MYu"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ox4-w2-oTz" secondAttribute="bottom" constant="43" id="8VB-BN-b90"/>
+                            <constraint firstItem="gZq-S3-fWn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gzr-pg-JfX"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OOk-t2-LFN" secondAttribute="bottom" id="HH1-e8-BCw"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="C5M-M4-Sak" secondAttribute="bottom" constant="43" id="Hx1-oh-HUm"/>
                             <constraint firstItem="OOk-t2-LFN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KOm-G2-q2C"/>
@@ -102,7 +113,9 @@
                             <constraint firstItem="OOk-t2-LFN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aS2-tu-gqZ"/>
                             <constraint firstItem="C5M-M4-Sak" firstAttribute="leading" secondItem="Ox4-w2-oTz" secondAttribute="trailing" id="dVI-Ox-rlO"/>
                             <constraint firstItem="MDb-DT-yf2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eUo-dZ-k6J"/>
+                            <constraint firstItem="gZq-S3-fWn" firstAttribute="top" secondItem="MDb-DT-yf2" secondAttribute="bottom" constant="18" id="iaZ-eT-BRh"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lx0-SS-lNg" secondAttribute="bottom" constant="43" id="lIn-ol-Pmy"/>
+                            <constraint firstAttribute="trailing" secondItem="gZq-S3-fWn" secondAttribute="trailing" id="mxL-sB-Wfd"/>
                             <constraint firstAttribute="trailing" secondItem="MDb-DT-yf2" secondAttribute="trailing" id="ppa-Kf-R47"/>
                             <constraint firstItem="Ox4-w2-oTz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rBl-l4-OWQ"/>
                             <constraint firstAttribute="trailing" secondItem="OOk-t2-LFN" secondAttribute="trailing" id="yko-nb-poL"/>
@@ -122,6 +135,7 @@
                         <outlet property="recordButton" destination="C5M-M4-Sak" id="XrD-qD-V43"/>
                         <outlet property="showListButton" destination="lx0-SS-lNg" id="p3J-tW-HIQ"/>
                         <outlet property="switchButton" destination="Ox4-w2-oTz" id="v08-ys-5xA"/>
+                        <outlet property="totalTimeLabel" destination="gZq-S3-fWn" id="st7-TN-zTD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
